[package]
name = "tb-simplecrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "*", features = ["js"] }
rand = { version = "^0.8" }
rust-crypto-wasm = { version = "^0.3" }
thiserror = { version = "^1.0" }
